# FVMGridMaker

./: CMakeLists.txt  README.md
FVMGridMakerLib/include/FVMGridMaker/Core/: ExecPolicy.hpp1  constants.h  namespace.h  type.h
FVMGridMakerLib/include/FVMGridMaker/ErrorHandling/: CoreErrors.h  Detail.h  ErrorConfig.h  ErrorHandling.h  ErrorManager.h  ErrorRecord.h  ErrorTraits.h  FVMGException.h  FileErrors.h  GridErrors.h  IErrorLogger.h  Language.h  Macros.h  MessageCatalog.hpp  Severity.h  Status.h
FVMGridMakerLib/include/FVMGridMaker/Grid/Common/: Options1D.hpp1  Tags1D.hpp
FVMGridMakerLib/include/FVMGridMaker/Grid/Grid1D/: Grid1D.h1
FVMGridMakerLib/include/FVMGridMaker/Grid/Grid1D/API/: Grid1D.h
FVMGridMakerLib/include/FVMGridMaker/Grid/Grid1D/Builders/: ConfigureDistribution.hpp  DistOptions.hpp  Grid1DBuilder.hpp  Grid1DDistributionRegistry.hpp  RegisterDistribution1D.hpp
FVMGridMakerLib/include/FVMGridMaker/Grid/Grid1D/Patterns/Centering/: CellCentered.hpp  ConceptsCentering.hpp  FaceCentered.hpp
FVMGridMakerLib/include/FVMGridMaker/Grid/Grid1D/Patterns/Distribution/: ConceptsDistribution.hpp  IDistribution1D.hpp  Random1D.hpp  Uniform1D.hpp
FVMGridMakerLib/include/FVMGridMaker/Grid/Grid1D/Utils/: Grid1DStats.hpp  Grid1DStatsExec.hpp  Grid1DValidation.hpp
FVMGridMakerLib/include/FVMGridMaker/User/: Centerings.hpp  Distributions.hpp
FVMGridMakerLib/src/ErrorHandling/: FVMGException.cpp
FVMGridMakerLib/src/Grid/Grid1D/Builders/: DistOptions.cpp  Grid1DBuilder.cpp  Grid1DDistributionRegistry.cpp
cmake/: ConfigCompiler.cmake  ConfigDocs.cmake  ConfigExamples.cmake  ConfigOptions.cmake  ConfigTargets.cmake  ConfigUtils.cmake
examples/: CMakeLists.txt
examples/ErrorHandling/: Ex_ErrorHandling.cpp
examples/Grid/Grid1D/RandomGrid1D/: Ex_RandomGrid1D.cpp  Random1D_DistOptions.hpp  RegisterRandom1D.cpp
examples/Grid/Grid1D/UniformGrid1D/: Ex_UniformGrid1D.cpp  RegisterUniform1D.cpp
tests/: CMakeLists.txt
tests/ErrorHandling/: ut_ErrorHandling.cpp
tests/Grid/Grid1D/Builders/DistributionRegistry/: RegisterDefaults_DistributionRegistry.cpp  ut_DistributionRegistry.cpp
tests/Grid/Grid1D/Common/Tags1D/: ut_Tags1D.cpp
tests/Grid/Grid1D/RandomGrid1D/: Random1D_DistOptions.hpp  RegisterRandom1D.cpp  ut_RandomGrid1D.cpp
tests/Grid/Grid1D/UniformGrid1D/: RegisterUniform1D.cpp  ut_UniformGrid1D.cpp
